tests/baselines/reference/exportSpecifierReferencingOuterDeclaration3.errors.txt
tests/cases/compiler/exportSpecifierReferencingOuterDeclaration3.ts(6,30): error TS2693: Module or namespace 'X' has no exported member 'bar'.


==== tests/cases/compiler/exportSpecifierReferencingOuterDeclaration3.ts (1 errors) ====
    declare module X { export interface bar { } }
    declare module "m" {
        module X { export interface foo { } }
        export { X };
        export function foo(): X.foo;
        export function bar(): X.bar; // error
                                 ~~~
!!! error TS2693: Module or namespace 'X' has no exported member 'bar'.
    }